// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        0
         
        expenses
      </span>
       totalling 
      <span>
        $235.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    />
    <Link
      className="button2"
      replace={false}
      to="/create"
    >
      Add Expense
    </Link>
  </div>
</div>
`;

exports[`should correctly render ExpenseSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        23
         
        expenses
      </span>
       totalling 
      <span>
        $2,354,155.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    />
    <Link
      className="button2"
      replace={false}
      to="/create"
    >
      Add Expense
    </Link>
  </div>
</div>
`;
